@@ -14,7 +14,7 @@ import dev.xkmc.l2hostility.content.item.traits.TraitSymbol;
 import dev.xkmc.l2hostility.content.traits.base.MobTrait;
 import dev.xkmc.l2hostility.init.L2Hostility;
 import dev.xkmc.l2hostility.init.data.LHConfigGen;
-import dev.xkmc.l2hostility.init.data.TagGen;
+import dev.xkmc.l2hostility.init.data.LHTagGen;
 import dev.xkmc.l2hostility.init.registrate.LHTraits;
 import dev.xkmc.l2library.base.NamedEntry;
 import dev.xkmc.l2serial.util.Wrappers;
@@ -52,7 +52,7 @@ public class TraitBuilder<T extends MobTrait, P> extends AbstractBuilder<MobTrai
 				.model((ctx, pvd) -> pvd.generated(ctx, pvd.modLoc("item/bg"),
 						pvd.modLoc("item/trait/" + ctx.getName())))
 				.setData(ProviderType.LANG, NonNullBiConsumer.noop())
-				.tag(TagGen.TRAIT_ITEM);
+				.tag(LHTagGen.TRAIT_ITEM);
 	}
 
 	@NonnullType
